增加k8s的日志